o.c.scan: Scan Editor uses web interface